--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">SensorMonitor</string>
+    <string name="recordButtonStart">START REC</string>
+    <string name="recordButtonStop">STOP REC</string>
 </resources>
